--- a/cit230/StormStop.html
+++ b/cit230/StormStop.html
@@ -31,9 +31,7 @@
 
 
 <p>Contact Information</p>
-
-
-<p class="footer-bar"> Copyright | ©StormStop | <span id="currentdate" </p>
+<p> Copyright ©StormStop </p>
 
 
 </body>
