--- a/cit230/Lesson 4/StormStop.html
+++ b/cit230/Lesson 4/StormStop.html
@@ -1,17 +1,14 @@
-
-
 <!doctype html>
 <html lang="en-US">
 <head>
 <meta charset="utf-8">
 <title>StormStop</title>
-<meta name="description" content="Description.">
 </head>
 <body>
 
 <h1>StormStop</h1>
 <h3>stopping you from getting into storms</h3>
-<img src="cloud-346710_1280.png" width="300" alt="The sun with a cloud in front">
+<img src="cloud-346710_1280.png" alt="The sun with a cloud in front">
 
 <div id="nav">
 <ul>
@@ -19,12 +16,12 @@
 <li><a href="#">Franklin</a></li>
 <li><a href="#">Springfield</a></li>
 <li><a href="#">Greenville</a></li>
-<li><a href="#">The Storm Center</a></li>
-<li><a href="#">The Gallery</a></li>
+<li><a href="#">Storm Center</a></li>
+<li><a href="#">Gallery</a></li>
 </ul>
 </div>
 <div id="main">
-<div>
+
 <h3>Franklin</h3>
 <h3> Weather Data </h3>
 <h3> 10 day forecast</h3>
@@ -35,11 +32,8 @@
 </div>
 
 <div id="footer">
-<aside>
 <p>Contact Information</p>
-</aside>
-
-<p class="footer-bar"> Copyright | ©ElCLIMA | <span id="currentdate" </p>
+<p class="footer-bar"> Copyright | ©StormStop</p>
 </div>
 
 </body>
