--- a/cit230/StormStop.html
+++ b/cit230/StormStop.html
@@ -5,13 +5,12 @@
 <head>
 <meta charset="utf-8">
 <title>StormStop</title>
-<meta name="description" content="Description.">
 </head>
 <body>
 
 <h1>StormStop</h1>
 <h3>stopping you from getting into storms</h3>
-<img src="cloud-346710_1280.png" width="300" alt="The sun with a cloud in front">
+<img src="cloud-346710_1280.png" alt="The sun with a cloud in front">
 
 
 <ul>
@@ -25,7 +24,7 @@
 <h3>Franklin</h3>
 <h3> Weather Data </h3>
 <h3> 10 day forecast</h3>
-<img src="" width="300" height="200" alt="picture of Franklin">
+<img src="" alt="picture of Franklin">
 <h3>Franklin Article</h3>
 <img src="">
 
