--- a/cit230/Lesson 5/franklin-5.html
+++ b/cit230/Lesson 5/franklin-5.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head> 
-	<meta charset="UTF-8">
+	<title>Storm Stop | Franklin</title>
+    <meta charset="UTF-8">
   	<meta name="description" content="Information about weather and cities">
   	<meta name="keywords" content="Weather,Franklin">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,9 +11,12 @@
 <body>
 
   <header>
+  	<h1>Storm Stop</h1>
   </header>
-
-  <nav>
+  
+  <main>
+    
+    <nav>
     <ul>
     	<li><a href="#">Home</a></li>
     	<li><a href="#">Franklin</a></li>
@@ -22,9 +26,6 @@
     	<li><a href="#">Gallery</a></li>
     </ul>		
   </nav>
-    
-  <main>
-    <h1>Storm Stop</h1>
     <figure>
     </figure>
     <section class="weather-summary">
