--- a/cit230/index.html
+++ b/cit230/index.html
@@ -12,7 +12,7 @@
 <li><a href="#">Lesson 2</a></li>
 <li><a href="#">Lesson 3</a></li>
 <li><a href="Lesson 4\Storm_Stop.html">Lesson 4</a></li>
-<li><a href="#">Lesson 5</a></li>
+<li><a href="Lesson 5\franklin-5.html">Franklin Site</a></li>
 
 </ol>
 </body>
