--- a/cit230/index.html
+++ b/cit230/index.html
@@ -13,6 +13,6 @@
 <li><a href="#">Lesson 3</a></li>
 <li><a href="Lesson 4\Storm_Stop.html">Lesson 4</a></li>
 <li><a href="Lesson 5\franklin-5.html">Franklin Site</a></li>
-
+<p> It all finally clicked! I'll fix everything up this week, I promise.</p>
 </ol>
 </body>
