--- a/cit230/index.html
+++ b/cit230/index.html
@@ -2,17 +2,35 @@
 <html lang="en-US">
 <head>
 <meta charset="utf-8">
-<title>StormStop</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<style>
+body,h1,h2,h3,h4,h5 
+	{	font-family: "Raleway", sans-serif}
+header, footer 
+	{ 	background-color: green;
+		padding: 35px;}
+img
+	{
+		float: right;
+		padding-right: 50px;
+		padding-top: -100px;
+	}
+</style>
+<title>Mitchell Thomas</title>
 </head>
 <body>
 
-<h1>Home Page</h1>
+<header>
+<h1>CIT 230: Assignment Portal</h1>
+<img src= 'images/Profile.jpg', width = 10%, alt = "A Picture of Mitchell">
+</header>
+
+
 <ol>
 <li><a href="#">Lesson 1</a></li>
 <li><a href="#">Lesson 2</a></li>
 <li><a href="#">Lesson 3</a></li>
-<li><a href="Lesson 4\Storm_Stop.html">Lesson 4</a></li>
-<li><a href="Lesson 5\franklin-5.html">Franklin Site</a></li>
-<p> It all finally clicked! I'll fix everything up this week, I promise.</p>
 </ol>
+
 </body>
