--- a/index.html
+++ b/index.html
@@ -1,36 +1,32 @@
-<!doctype html>
-<html lang="en-US">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="author" content="Mitchell Thomas">
+<meta name="description" content="This is my index page for CIT 230, it will contain links to all the projects we do in class.">
 
-<style>
-body,h1,h2,h3,h4,h5 
-	{	font-family: "Raleway", sans-serif}
-header, footer 
-	{ 	background-color: green;
-		padding: 35px;}
-img
-	{
-		float: right;
-		padding-right: 50px;
-		padding-top: -100px;
-	}
-</style>
 <title>Mitchell Thomas</title>
+
+<link href="IndexStyle.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
 <body>
+    <div id="contents">
+        <header class="main">
+            <span id="name">Mitchell Thomas</span>
+            <img src="images/Profile.jpg" alt="A picture of me" width=8%>
+        </header>
+            <h3>CIT 230: Assignment Portal</h3>
+            <hr>
+            <ul>
+                <li>Week 02: <a href=# >Assignment Link</a></li>
+                <li>Week 03: <a href=# >Assignment Link</a></li>
+                <li>Week 04: <a href=#>Link</a> | <a href=#>Link</a></li>
+            </ul>
+        <footer class="main">
+            <p>© 2020 | Mitchell Thomas | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
+            <p>Last Modified 09/21/2019 1:34</p>
+        </footer> 
+    </div>
 
-<header>
-<h1>CIT 230: Assignment Portal</h1>
-<img src= 'images/Profile.jpg', width = 10%, alt = "A Picture of Mitchell">
-</header>
-
-
-<ol>
-<li><a href="#">Lesson 1</a></li>
-<li><a href="#">Lesson 2</a></li>
-<li><a href="#">Lesson 3</a></li>
-</ol>
 
 </body>
