--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="contents">
         <header class="main">
             <span id="name">Mitchell Thomas</span>
-            <img src="images/Profile.jpg" alt="A picture of me" width=8%>
+            <img src="Images/Profile.jpg" alt="A picture of me" width=8%>
         </header>
             <h3>CIT 230: Assignment Portal</h3>
             <hr>
