--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 <meta name="description" content="This is my index page for CIT 230, it will contain links to all the projects we do in class.">
 
 <title>Mitchell Thomas</title>
-
+<script>
+var today = new Date();
+var date = today.getFullYear()+'-'+(today.getMonth()+1)+'-'+today.getDate();
+var time = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
+var dateTime = date+' '+time;
+</script>
 <link href="IndexStyle.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
@@ -24,7 +29,7 @@
             </ul>
         <footer class="main">
             <p>© 2020 | Mitchell Thomas | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
-            <p>Last Modified 09/21/2019 1:34</p>
+            <p>Last Modified <script type="text/javascript"> document.write(dateTime)</script>
         </footer> 
     </div>
 
