--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,8 +18,7 @@ var dateTime = date+' '+time;
 <body>
     <div id="contents">
         <header class="main">
-            <span id="name">Mitchell Thomas</span>
-            <img src="Images/Profile.jpg" alt="A picture of me" width=8%>
+          <h1><span id="name"> Mitchell Thomas</span><img src="Images/Profile.jpg" alt="A picture of me"></h1>
         </header>
             <h3>CIT 230: Assignment Portal</h3>
             <hr>
