--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ var dateTime = date+' '+time;
 <body>
     <div id="contents">
         <header class="main">
-          <h1><span id="name"> Mitchell Thomas</span><img src="Images/Profile.jpg" alt="A picture of me"></h1>
+          <h1><span id="name"> <strong>Mitchell Thomas</strong></span><img src="Images/Profile.jpg" alt="A picture of me"></h1>
         </header>
             <h3>CIT 230: Assignment Portal</h3>
             <hr>
