--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ var dateTime = date+' '+time;
             </ul>
         <footer class="main">
             <p>© 2020 | Mitchell Thomas | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
-            <p>Last Modified <script type="text/javascript"> document.write(dateTime)</script>
+            <p>Last Modified <script> document.write(dateTime)</script>
         </footer> 
     </div>
 
