--- a/Week 2/Design_Principles.html
+++ b/Week 2/Design_Principles.html
@@ -19,12 +19,13 @@ var dateTime = date+' '+time;
  
 <div class="wrapper">
   <div class="header">Design Principles</div>
-  <div class="col-one"><img src="Images/lyft.jpg" height= "450px" border="5px">
-  <p> Lyft has a really great design on mobile that I think really captures the 
+  <div class="col-one">
+  <h1>Lyft</h1><br>Lyft.com</p>
+  <img src="Images/lyft.jpg" height= "450px" border="5px">
   </div>
-  <div class="col-two"><img src="Images/Apple.png" height= "450px" border="5px">
+  <div class="col-two"><p>Apple<br>Apple.com</p><img src="Images/Apple.png" height= "450px" border="5px">
   </div>
-  <div class="col-three"><img src="Images/reddit.png" height="450px"border="5px">
+  <div class="col-three"><p>Reddit<br>Reddit.com</p><img src="Images/reddit.png" height="450px"border="5px">
   </div>
   <div class="footer"><p>© 2020 | Mitchell Thomas | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
             <p>Last Modified <script type="text/javascript"> document.write(dateTime)</script></div>
