--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ var dateTime = date+' '+time;
             <h3>CIT 230: Assignment Portal</h3>
             <hr>
             <ul>
-                <li>Week 02: <a href=Week2/Design_Principles.hmtl >Design Principles</a></li>
+                <li>Week 02: <a href=Week2/Design_Principles.html >Design Principles</a></li>
                 <li>Week 03: <a href=# >Assignment Link</a></li>
                 <li>Week 04: <a href=#>Link</a> | <a href=#>Link</a></li>
             </ul>
