--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ var dateTime = date+' '+time;
             <hr>
             <ul>
                 <li>Week 02: <a href=Week2/Design_Principles.html >Design Principles</a></li>
-                <li>Week 03: <a href=# >Assignment Link</a></li>
+                <li>Week 03: <a href=Week3/index.html >StormStop.org</a></li>
                 <li>Week 04: <a href=#>Link</a> | <a href=#>Link</a></li>
             </ul>
         <footer class="main">
