--- a/Week3/index.html
+++ b/Week3/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="Mitchell Thomas">
-<meta name="description" content="This is my second page for CIT 230, it will contain my design principles work.">
+<meta name="description" content="This is my third page for CIT 230, it will contain my weather website.">
 
 <title>StormStop</title>
 <script>
@@ -12,6 +12,27 @@ var date = today.getFullYear()+'-'+(today.getMonth()+1)+'-'+today.getDate();
 var time = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
 var dateTime = date+' '+time;
 </script>
-<link href="Style/Main.css" rel="stylesheet" type="text/css">
+<link href="Styles/main.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
+<body>
+<header>
+ <h1> StormStop </h1>
+ <img src="Images/inclement_weather.png" alt="Clouds With different percipitation"></header>
+ <nav>
+ <ul>
+  <li><a href=#>Home</a></li>
+  <li><a href=#>Target Audience</a></li>
+  <li><a href=#>Color Scheme</a></li>
+  <li><a href=#>Typography</a></li>
+ </ul>
+</nav>
+ <h1>Website Purpose</h1>
+ <hr>
+ <p>The purpose of StormStop.org is to inform people on when rain in going to start and stop on upcoming days. It will also have a 5 day forecast and an updating radar.</p>
+
+<footer>
+<p>© 2020 | Mitchell Thomas | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
+            <p>Last Modified <script> document.write(dateTime)</script></p>
+</footer>
+</body>
