Storm Stop upload

--- a/Week3/target_audience.html
+++ b/Week3/target_audience.html
@@ -27,24 +27,14 @@ var dateTime = date+' '+time;
   <li><a href=typography.html>Typography</a></li>
  </ul>
 </nav>
- <div class="row">
-        <div class="col-one">
-	<article>
-		<h2>Site Purpose</h2>
-		<p>The purpose of StormStop.org is to inform people on when rain in going to start and stop on upcoming days. It will also have a 5 day forecast and an updating radar.</p>
-    </article>
-    </div>
-    <div class="col-two">
-	<article>
-		<h2>Domain</h2>
-		<p>The domain for my site is StormStop.org
-            <br>
-            It costs $12 a year on Google Domains.
-        <br><br><br><br><br><br></p>
-    </article>
-    </div>
-</div>
- 
+ <h1>Target Audience</h1>
+ <hr>
+ <p>The target audience is anybody who goes outside for an extended period of time. Weather details are important for day to day activities like walking, bicycling and taking pictures for example. Anybody </p>
+ <p>1st persona:</p>
+ <p>A 26 year old wedding planner. She needs to find out when the best hour to do outdoor pictures is so that it won't be raining during picture time. She can find that information on the daily outlook.</p>
+ <p>2nd persona: </p>
+ <p>A 45 year old businessman. He commutes on a bicycle. He needs to know whether or not to pack a jacket for his to work or his ride home. He can easily see when it will be raining and decide if he needs to cover up or not.</p>
+
 <footer>
 <p>© 2020 | Mitchell Thomas | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
             <p>Last Modified <script> document.write(dateTime)</script></p>
