--- a/Week3/color_scheme.html
+++ b/Week3/color_scheme.html
@@ -27,24 +27,10 @@ var dateTime = date+' '+time;
   <li><a href=typography.html>Typography</a></li>
  </ul>
 </nav>
- <div class="row">
-        <div class="col-one">
-	<article>
-		<h2>Site Purpose</h2>
-		<p>The purpose of StormStop.org is to inform people on when rain in going to start and stop on upcoming days. It will also have a 5 day forecast and an updating radar.</p>
-    </article>
-    </div>
-    <div class="col-two">
-	<article>
-		<h2>Domain</h2>
-		<p>The domain for my site is StormStop.org
-            <br>
-            It costs $12 a year on Google Domains.
-        <br><br><br><br><br><br></p>
-    </article>
-    </div>
-</div>
- 
+ <h1>Color Scheme</h1>
+ <hr>
+ <p><img src="Images/4f6d7a-c0d6df-dbe9ee-4a6fa5-166088.png" width="800" height="500" alt="Color palette"></p>
+
 <footer>
 <p>© 2020 | Mitchell Thomas | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
             <p>Last Modified <script> document.write(dateTime)</script></p>
