Added Link back to Home Page

--- a/Week3/color_scheme.html
+++ b/Week3/color_scheme.html
@@ -32,7 +32,7 @@ var dateTime = date+' '+time;
  <p><img src="Images/4f6d7a-c0d6df-dbe9ee-4a6fa5-166088.png" width="800" height="500" alt="Color palette"></p>
 
 <footer>
-<p>© 2020 | Mitchell Thomas | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
+<p>© 2020 | <a href="welchz.github.io">Mitchell Thomas</a> | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
             <p>Last Modified <script> document.write(dateTime)</script></p>
 </footer>
 </body>
