--- a/Week3/index.html
+++ b/Week3/index.html
@@ -46,7 +46,7 @@ var dateTime = date+' '+time;
 </div>
  
 <footer>
-<p>© 2020 | Mitchell Thomas | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
+<p>© 2020 | <a href="welchz.github.io">Mitchell Thomas</a> | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
             <p>Last Modified <script> document.write(dateTime)</script></p>
 </footer>
 </body>
