--- a/Week3/target_audience.html
+++ b/Week3/target_audience.html
@@ -36,7 +36,7 @@ var dateTime = date+' '+time;
  <p>A 45 year old businessman. He commutes on a bicycle. He needs to know whether or not to pack a jacket for his to work or his ride home. He can easily see when it will be raining and decide if he needs to cover up or not.</p>
 
 <footer>
-<p>© 2020 | Mitchell Thomas | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
+<p>© 2020 | <a href="welchz.github.io">Mitchell Thomas</a> | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
             <p>Last Modified <script> document.write(dateTime)</script></p>
 </footer>
 </body>
