--- a/Week3/typography.html
+++ b/Week3/typography.html
@@ -27,12 +27,13 @@ var dateTime = date+' '+time;
   <li><a href=typography.html>Typography</a></li>
  </ul>
 </nav>
- <h1>Typography</h1>
+ <h1>Raleway</h1>
  <hr>
- <p>Raleway</p>
+ <p>Raleway is used throughout the sites Headings and Navigation Bar</p>
+ <p>&nbsp;</p>
 
 <footer>
-<p>© 2020 | Mitchell Thomas | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
+<p>© 2020 | <a href="welchz.github.io">Mitchell Thomas</a> | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
             <p>Last Modified <script> document.write(dateTime)</script></p>
 </footer>
 </body>
