--- a/Week3/index.html
+++ b/Week3/index.html
@@ -12,6 +12,7 @@ var date = today.getFullYear()+'-'+(today.getMonth()+1)+'-'+today.getDate();
 var time = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
 var dateTime = date+' '+time;
 </script>
+<link href="Styles/normalize.css" rel="stylesheet" type="text/css" >
 <link href="Styles/main.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
