--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@ var dateTime = date+' '+time;
             <ul>
                 <li>Week 02: <a href=Week2/Design_Principles.html >Design Principles</a></li>
                 <li>Week 03: <a href=Week3/index.html >StormStop.org</a></li>
-                <li>Week 04: <a href=#>Link</a> | <a href=#>Link</a></li>
+                <li>Week 04: <a href=Week4/preston-4.html>Preston Town</a>  </li>
             </ul>
         <footer class="main">
             <p>© 2020 | Mitchell Thomas | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
             <p>Last Modified <script> document.write(dateTime)</script>
-        </footer> 
+        </footer>
     </div>
 
 
