--- a/Week5/preston-5.html
+++ b/Week5/preston-5.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="Mitchell Thomas">
-<meta name="description" content="This is my fourth page for CIT 230, it will contain my weather websites Preston page.">
+<meta name="description" content="This is my fifth page for CIT 230, it will contain my weather websites Preston page with some additions made.">
 
 <title>Preston Page</title>
 <script>
@@ -16,6 +16,7 @@ var today = new Date();
 var date = today.getDate()+", "+today.getFullYear();
 
 </script>
+<link href = "js/active.js" rel= "script" type="text/js" >
 <link href="css/main.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
@@ -26,12 +27,12 @@ var date = today.getDate()+", "+today.getFullYear();
 </header>
  <nav>
  <ul>
-  <li><a href=index.html>Home</a></li>
-  <li><a href=#>Preston</a></li>
-  <li><a href=#>Soda Springs</a></li>
-  <li><a href=#>Fish Haven</a></li>
-  <li><a href=#>Storm Center</a></li>
-  <li><a href=#>Gallery</a></li>
+  <li><a href="index.html" class = "navBar">Home</a></li>
+  <li><a href=# class = "navBaractive">Preston</a></li>
+  <li><a href=# class = "navBar">Soda Springs</a></li>
+  <li><a href=# class = "navBar">Fish Haven</a></li>
+  <li><a href=# class = "navBar">Storm Center</a></li>
+  <li><a href=# class = "navBar">Gallery</a></li>
  </ul>
 </nav>
  <h1>Preston</h1>
