--- a/Week5/preston-5.html
+++ b/Week5/preston-5.html
@@ -42,15 +42,43 @@ var date = today.getDate()+", "+today.getFullYear();
  </section>
  <section class ="widget">
  <p>5 day forecast </p>
+ <table style="width:100%">
+ <tr>
+   <th>Monday</th>
+   <th>Teusday</th>
+   <th>Wednesday</th>
+   <th>Thursday</th>
+   <th>Friday</th>
+ </tr>
+  <tr>
+   <td><img src= images/sunny.png></td>
+   <td><img src= images/Cloudy.png></td>
+   <td><img src= images/Overcast.png></td>
+   <td><img src= images/Cloudy.png></td>
+   <td><img src= images/sunny.png></td>
+ </tr>
+ <tr>
+   <td>71℉</td>
+   <td>52℉</td>
+   <td>41℉</td>
+   <td>56℉</td>
+   <td>72℉</td>
+ </tr>
+</table>
+
  </section>
  <section class = "widget">
    <article>
      <h3> Article Title</h3>
      <h5> by StormStop</h5>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis neque doloribus voluptates facilis laboriosam accusantium excepturi! Error assumenda, dicta non excepturi dolorem iusto quos ipsam quae, commodi adipisci voluptatum repellat!
+
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam aut a officiis, possimus incidunt nesciunt eum eligendi excepturi magni pariatur minima porro magnam at eos est perferendis repellat eveniet quis</p>
   </article>
  </section>
    <section class= "widget">
      <p>Map || Contact Information</p>
+     <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47365.726282523094!2d-111.91534459120224!3d42.09980531205498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C%20ID%2083263!5e0!3m2!1sen!2sus!4v1571375322108!5m2!1sen!2sus" style="border:0;" width="300" height="350" frameborder="0"></iframe>
    </section>
 <footer>
 <p>© 2019 | <a href="welchz.github.io">Mitchell Thomas</a> | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
