--- a/Week5/preston-5.html
+++ b/Week5/preston-5.html
@@ -16,16 +16,20 @@ var today = new Date();
 var date = today.getDate()+", "+today.getFullYear();
 
 </script>
-<link href = "js/active.js" rel= "script" type="text/js" >
-<link href="css/main.css" rel="stylesheet" type="text/css">
+<script src ="js/active.js"></script>
+<link href="css/normalize.css" rel="stylesheet" type="text/css">
+<link href="css/small.css" rel="stylesheet" type="text/css">
+<link href="css/medium.css" rel="stylesheet" type="text/css">
+<link href="css/large.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
-<body>
+<body onload="pancakeAlert()">
 <header>
  <h1> <img src="images/inclement_weather.png" alt="Clouds With different percipitation" > StormStop </h1> <h3>Dont let the storms stop you!</h3>
 
 </header>
- <nav>
+  <button onclick="toggleMenu()" class = "menuButton">Menu</button>
+ <div id="nav">
  <ul>
   <li><a href="index.html" class = "navBar">Home</a></li>
   <li><a href=# class = "navBaractive">Preston</a></li>
@@ -34,13 +38,23 @@ var date = today.getDate()+", "+today.getFullYear();
   <li><a href=# class = "navBar">Storm Center</a></li>
   <li><a href=# class = "navBar">Gallery</a></li>
  </ul>
-</nav>
+</div>
  <h1>Preston</h1>
+ <h3 id="pancake_alert"> Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion. <h3>
  <hr>
- <section class="widget">
- <p>Weather Summary</p>
- </section>
- <section class ="widget">
+ <div class="weather_widget">
+
+   <h2>Weather Summary</h2>
+            <ul class="info">
+              <li>Currently: Sunny</li>
+              <li>Temperature: 71&#176; F</li>
+              <li>Humidity: 34%</li>
+              <li>Precipitation: 0 inches</li>
+              <li>Wind Speed: 4 mph</li>
+            </ul>
+          <section>
+</div>
+ <div class ="forecast">
  <p>5 day forecast </p>
  <table style="width:100%">
  <tr>
@@ -66,20 +80,24 @@ var date = today.getDate()+", "+today.getFullYear();
  </tr>
 </table>
 
- </section>
- <section class = "widget">
+</div>
+ <div class = "widget">
    <article>
+     <img src="images/cloudy.png">
      <h3> Article Title</h3>
      <h5> by StormStop</h5>
      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis neque doloribus voluptates facilis laboriosam accusantium excepturi! Error assumenda, dicta non excepturi dolorem iusto quos ipsam quae, commodi adipisci voluptatum repellat!
 
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam aut a officiis, possimus incidunt nesciunt eum eligendi excepturi magni pariatur minima porro magnam at eos est perferendis repellat eveniet quis</p>
+
   </article>
- </section>
-   <section class= "widget">
-     <p>Map || Contact Information</p>
-     <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47365.726282523094!2d-111.91534459120224!3d42.09980531205498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C%20ID%2083263!5e0!3m2!1sen!2sus!4v1571375322108!5m2!1sen!2sus" style="border:0;" width="300" height="350" frameborder="0"></iframe>
-   </section>
+</div>
+   <div class= "widget">
+     <h3>Contact Information</h3>
+      <div class="hideable">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47365.773853438026!2d-111.91534443111688!3d42.09974162639047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C%20ID%2083263!5e0!3m2!1sen!2sus!4v1571541965227!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+      </div>
+   </div>
 <footer>
 <p>© 2019 | <a href="welchz.github.io">Mitchell Thomas</a> | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
             <p><script> document.write(dayNames[today.getDay()]+", "+monthNames[today.getMonth()]+" " + date)</script></p>
