fixed img and html tags

--- a/Week5/preston-5.html
+++ b/Week5/preston-5.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,7 +41,7 @@ var date = today.getDate()+", "+today.getFullYear();
  </ul>
 </div>
  <h1>Preston</h1>
- <h3 id="pancake_alert"> Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion. <h3>
+ <h3 id="pancake_alert"> Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion. </h3>
  <hr>
  <div class="weather_widget">
 
@@ -52,7 +53,7 @@ var date = today.getDate()+", "+today.getFullYear();
               <li>Precipitation: 0 inches</li>
               <li>Wind Speed: 4 mph</li>
             </ul>
-          <section>
+
 </div>
  <div class ="forecast">
  <p>5 day forecast </p>
@@ -65,11 +66,11 @@ var date = today.getDate()+", "+today.getFullYear();
    <th>Friday</th>
  </tr>
   <tr>
-   <td><img src= images/sunny.png></td>
-   <td><img src= images/Cloudy.png></td>
-   <td><img src= images/Overcast.png></td>
-   <td><img src= images/Cloudy.png></td>
-   <td><img src= images/sunny.png></td>
+   <td><img src= images/sunny.png alt="a picture of the sun"></td>
+   <td><img src= images/Cloudy.png alt="a picture of a rain cloud"></td>
+   <td><img src= images/Overcast.png alt="a picture of clouds covering the sun"></td>
+   <td><img src= images/Cloudy.png alt="a picture of a rain cloud"></td>
+   <td><img src= images/sunny.png alt="a picture of the sun"></td>
  </tr>
  <tr>
    <td>71℉</td>
@@ -83,7 +84,7 @@ var date = today.getDate()+", "+today.getFullYear();
 </div>
  <div class = "widget">
    <article>
-     <img src="images/cloudy.png">
+     <img src="images/cloudy.png" alt="a picture of a rain cloud" >
      <h3> Article Title</h3>
      <h5> by StormStop</h5>
      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis neque doloribus voluptates facilis laboriosam accusantium excepturi! Error assumenda, dicta non excepturi dolorem iusto quos ipsam quae, commodi adipisci voluptatum repellat!
@@ -95,7 +96,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam aut a officiis, p
    <div class= "widget">
      <h3>Contact Information</h3>
       <div class="hideable">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47365.773853438026!2d-111.91534443111688!3d42.09974162639047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C%20ID%2083263!5e0!3m2!1sen!2sus!4v1571541965227!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47365.773853438026!2d-111.91534443111688!3d42.09974162639047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C%20ID%2083263!5e0!3m2!1sen!2sus!4v1571541965227!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen=""></iframe>
       </div>
    </div>
 <footer>
@@ -103,3 +104,4 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam aut a officiis, p
             <p><script> document.write(dayNames[today.getDay()]+", "+monthNames[today.getMonth()]+" " + date)</script></p>
 </footer>
 </body>
+</html>
