--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ var dateTime = date+' '+time;
                 <li>Week 02: <a href=Week2/Design_Principles.html >Design Principles</a></li>
                 <li>Week 03: <a href=Week3/index.html >StormStop.org</a></li>
                 <li>Week 04: <a href=Week4/preston-4.html>Preston Town</a>  </li>
+                <li>Week 05: <a href=Week5/preston-5.html>Preston Town updated</a>  </li>
             </ul>
         <footer class="main">
             <p>© 2020 | Mitchell Thomas | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
