--- a/Week5/preston-5.html
+++ b/Week5/preston-5.html
@@ -67,9 +67,9 @@ var date = today.getDate()+", "+today.getFullYear();
  </tr>
   <tr>
    <td><img src= images/sunny.png alt="a picture of the sun"></td>
-   <td><img src= images/Cloudy.png alt="a picture of a rain cloud"></td>
+   <td><img src= images/cloudy.png alt="a picture of a rain cloud"></td>
    <td><img src= images/Overcast.png alt="a picture of clouds covering the sun"></td>
-   <td><img src= images/Cloudy.png alt="a picture of a rain cloud"></td>
+   <td><img src= images/cloudy.png alt="a picture of a rain cloud"></td>
    <td><img src= images/sunny.png alt="a picture of the sun"></td>
  </tr>
  <tr>
