--- a/Week6/preston-6.html
+++ b/Week6/preston-6.html
@@ -18,13 +18,14 @@ var date = today.getDate()+", "+today.getFullYear();
 
 </script>
 <script src ="js/active.js"></script>
+<script src ="js/windchill.js"></script>
 <link href="css/normalize.css" rel="stylesheet" type="text/css">
 <link href="css/small.css" rel="stylesheet" type="text/css">
 <link href="css/medium.css" rel="stylesheet" type="text/css">
 <link href="css/large.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
-<body onload="pancakeAlert()">
+<body onload="pancakeAlert()" onload="windChill()">
 <header>
  <h1> <img src="images/inclement_weather.png" alt="Clouds With different percipitation" > StormStop </h1> <h3>Dont let the storms stop you!</h3>
 
@@ -44,16 +45,22 @@ var date = today.getDate()+", "+today.getFullYear();
  <h3 id="pancake_alert"> Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion. </h3>
  <hr>
  <div class="weather_widget">
-
-   <h2>Weather Summary</h2>
-            <ul class="info">
+   <picture>
+    <source media="(min-width: 950px)" srcset="images/franklin-large.jpg">
+    <source media="(min-width: 600px)" srcset="images/franklin-middle.jpg">
+    <img src="images/franklin-small.jpg">
+   </picture>
+   <div class = "weather_summary">
+     <h2>Weather Summary</h2>
+              <ul class="info">
               <li>Currently: Sunny</li>
-              <li>Temperature: 71&#176; F</li>
+              <li>Temperature: <span id="temp">71</span>&#176; F</li>
               <li>Humidity: 34%</li>
               <li>Precipitation: 0 inches</li>
-              <li>Wind Speed: 4 mph</li>
+              <li>Wind Speed: <span id="wind">4</span> mph</li>
+              <li id="windChill"></li>
             </ul>
-
+          </div>
 </div>
  <div class ="forecast">
  <p>5 day forecast </p>
