--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ var dateTime = date+' '+time;
                 <li>Week 05: <a href=Week5/preston-5.html>Preston Town updated</a>  </li>
                 <li>Week 06: <a href=Week6/preston-6.html>Preston Town update continued</a>  </li>
                 <li>Week 07: <a href=Week7/gallery-7.html>Gallery page with IntersectionObserver</a>  </li>
+                <li>Week 08: <a href=Week8/stormcenter.html>Storm Center Page with forms</a>  </li>
             </ul>
         <footer class="main">
             <p>© 2020 | Mitchell Thomas | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
