--- a/Week8/stormcenter.html
+++ b/Week8/stormcenter.html
@@ -4,9 +4,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="Mitchell Thomas">
-<meta name="description" content="This is my fifth page for CIT 230, it will contain my weather websites Preston page with some additions made.">
+<meta name="description" content="This is my Forms page for CIT 230, it will contain my weather websites storm report page.">
 
-<title>Preston Page</title>
+<title>Storm Center Form</title>
 <script>
 const monthNames = ["January", "February", "March", "April", "May", "June",
   "July", "August", "September", "October", "November", "December"
