--- a/Week8/thanks.html
+++ b/Week8/thanks.html
@@ -6,7 +6,7 @@
 <meta name="author" content="Mitchell Thomas">
 <meta name="description" content="This is my fifth page for CIT 230, it will contain my weather websites Preston page with some additions made.">
 
-<title>Preston Page</title>
+<title>Thank You!</title>
 <script>
 const monthNames = ["January", "February", "March", "April", "May", "June",
   "July", "August", "September", "October", "November", "December"
