added link to week 11

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@ var dateTime = date+' '+time;
                 <li>Week 06: <a href=Week6/preston-6.html>Preston Town update continued</a>  </li>
                 <li>Week 07: <a href=Week7/gallery-7.html>Gallery page with IntersectionObserver</a>  </li>
                 <li>Week 08: <a href=Week8/stormcenter.html>Storm Center Page with forms</a>  </li>
+                <li>Week 09: <a href=Week9/stormcenter.html>Week 9</a>  </li>
+                <li>Week 10: <a href=Week10/stormcenter.html>Week 10</a>  </li>
+                <li>Week 11: <a href=Week11/index.html>Final Site Homepage</a>  </li>
             </ul>
         <footer class="main">
             <p>© 2020 | Mitchell Thomas | Idaho | <a href="https://www.byui.edu/online">BYUi Online Learning </a></p>
